# spcwebsite

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  build.sh  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt
.config/: Caddyfile  supervisord.conf
.github/workflows/: docker-build.yml
core/: admin.py  forms.py  models.py  urls.py  views.py
core/management/commands/: export_verified_emails.py
core/templates/: userindex.html
core/templates/registration/: confirm_email.html  confirm_error.html  confirm_request.html  confirm_successful.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_email.html  password_reset_form.html  signup.html
cron.d/: evaluate_submissions
eval/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  views.py
eval/management/commands/: create_random.py  evaluate_submissions.py  multi_submit.py  rank_submissions.py
eval/templates/: compare.html  confirm_delete.html  detail.html  reconstruction.html  resultentry_form.html  submit.html
eval/templatetags/: custom_filters.py  na_filters.py
spceval/: apps.py
spcwebsite/: asgi.py  settings.py  urls.py  wsgi.py
static/: img-slider.js  style.css
templates/: base.html  competition.html  download.html  faq.html  index.html
