[project]
name = "spcwebsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-anymail[resend]>=13.1",
    "django-simple-captcha>=0.6.2",
    "gunicorn>=23.0.0",
    "imageio>=2.37.0",
    "litecli>=1.17.0",
    "numpy>=2.1.2",
    "rich>=14.2.0",
    "torch>=2.8.0",
    "torchmetrics>=1.2.1",
    "torchvision>=0.23.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
